kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-sample
  namespace: dotnet-sample
spec:
  selector:
    matchLabels:
      app: dotnet-sample
  template:
    metadata:
      labels:
        app: dotnet-sample
        app.kubernetes.io/instance: dotnet-sample
        app.kubernetes.io/name: dotnet-sample
    spec:
      containers:
      - name: dotnet-sample
        image: mayurkumar0393/dotnet-sample:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        - containerPort: 443

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: dotnet-sample
  name: dotnet-sample
  namespace: dotnet-sample
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app.kubernetes.io/instance: dotnet-sample
    app.kubernetes.io/name: dotnet-sample
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/name: dotnet-sample
    helm.sh/chart: dotnet-sample
  name: dotnet-sample
  namespace: dotnet-sample
spec:
  rules:
  - host: dotnet-example.mkumar.me
    http:
      paths:
      - backend:
          serviceName: dotnet-sample
          servicePort: http
        path: /
  tls:
  - hosts:
    - dotnet-example.mkumar.me
    secretName: dotnet-sample-tls
